--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ $(document).ready(function(){
                     <div class="featured-artist-content">
                         <!-- Section Heading -->
                         <div class="section-heading white text-left mb-30">
-                            <p><font style="font-family: 'Audiowide', cursive;" size="8">I n i t i a t i v e s</font></p>
+                            <p><font style="font-family: 'Audiowide', cursive;" size="8">I n i t i a t i v e </font></p>
                             <h2><br><br>National Initiative for Setting up of <font face="Allerta Stencil" color="lightblue">Design Innovation Centre</font></h2>
                         </div>
                         <p><font style="font-family: 'Kanit', sans-serif;"> Ministry of Human Resources and Development, New Delhi, Government of India has given an opportunity to open a Design Innovation Centre (DIC) at IIT Kanpur.
