--- a/summit.html
+++ b/summit.html
@@ -8,6 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"><script src="jquery.ckLine.js"></script>
     <title>E Summit 2k19</title>
+	<link rel="icon" href="img/core-img/favicon.png">
+
+	
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Audiowide|Arvo|Exo|Kanit|Raleway" rel="stylesheet">
     <style>
         body,
         html {
@@ -103,6 +107,13 @@ hr {
   
 }
 
+	
+	.bottomleft {
+    position: absolute;
+    bottom: 0;
+    left: 16px;
+}
+
 
  #social {
   position:absolute;
@@ -160,9 +171,13 @@ hr {
     <hr>
     <p id="demo" style="font-size:30px"></p>
 
-	<a href="register.html" class="button">Register</a>
+	<a href="index.html" class="button">Go Back</a>
   </div>
   
+  <div class="bottomleft">
+    <p><font size="6" style="font-family: 'Audiowide', cursive;"><font color="#f00">GIIEC </font> presents E-Summit 2019</font></p>
+	<br>
+	</div>
   
 <div id="social">	
 <a href="https://www.facebook.com/ecell.hbtuk/" > <img src="facebook-Icon.png"></a>
@@ -188,7 +203,7 @@ hr {
 
     
 
-var countDownDate = new Date("Feb 9, 2019 10:37:25").getTime();
+var countDownDate = new Date("Apr 9, 2019 10:37:25").getTime();
 
 
 var countdownfunction = setInterval(function() {
