--- a/team.html
+++ b/team.html
@@ -287,7 +287,7 @@ button:hover, a:hover {
                                     <li><a href="index.html#archives"> Archives</a></li>
                                     <li><a href="index.html#upcoming">Upcoming Events</a></li>
 									<li><a href="team.html">The Team</a></li>
-									<li><a href="esummit.html"><span class="blinking">E-Summit</span></a></li>
+									<li><a href="summit.html"><span class="blinking">E-Summit</span></a></li>
                                     <li><a href="index.html#contact">Contact</a></li>
                                 </ul>
 
@@ -309,12 +309,12 @@ button:hover, a:hover {
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/team.png);">
         <div class="bradcumbContent">
             <p></p>
-            <h2>OUR TEAM</h2>
+            <h2><font style="font-family: 'Audiowide', cursive;">O U R &nbsp;  T E A M </h2>
         </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
 
-	</a></li><marquee behavior="scroll" direction="left"><a href="index.html#register"><font size="5" style="font-family: 'Raleway', sans-serif;"><span class="blinking1"><u>E- Summit 2019 registrations have begun.... Hurry Up!!! Click here to Pre- Register..</u></span></a></font></marquee>
+	</a></li><marquee behavior="scroll" direction="left"><a href="index.html#register"><font size="5" style="font-family: 'Raleway', sans-serif;"><span class="blinking1"><u>E- Summit 2019 registrations will begin soon.... Stay Tuned!</u></span></a></font></marquee>
 	
     <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100-0">
@@ -322,6 +322,7 @@ button:hover, a:hover {
 <div class="row">
   <div class="column">
  <div class="card">
+ <div class="form-group wow fadeInUp" data-wow-delay="100ms">
   <img src="assets\images\harshit_sir.jpg" alt="Unknown" style="width:100%">
   <div class="container">
   <h1>Harshit Tripathi</h1>
@@ -330,11 +331,13 @@ button:hover, a:hover {
   <a href="https://bit.ly/2MJ4wDD"><i class="fa fa-linkedin" style="color:blue" ></i></a> &nbsp;&nbsp;
    
   <p><button class="but">Contact</button></p>
+  </div>
 </div>
 </div>
 </div>
 <div class="column">
 <div class="card">
+<div class="form-group wow fadeInUp" data-wow-delay="100ms">
   <img src="assets\images\vishal_sir.jpg" alt="Unknown" style="width:100%">
   <div class="container">
  <h1>Vishal Gupta</h1>
@@ -347,12 +350,14 @@ button:hover, a:hover {
 </div>
 </div>
 </div>
+</div>
 <br><br><br><br>
 <h1 class="heading"><center> Web and App Development </center></h1>
 
 
 
 <div class="card">
+<div class="form-group wow fadeInUp" data-wow-delay="100ms">
   <img src="assets/images/arnav_sir.jpeg" alt="Unknown" style="width:100%">
   <div class="container">
   <h1> Arnav Srivastava </h1>
@@ -361,6 +366,7 @@ button:hover, a:hover {
   <a href="https://www.linkedin.com/in/arnav-srivastava-85bb68126"><i class="fa fa-linkedin" style="color:blue"></i></a> &nbsp;&nbsp;
   
   <p><button class="but">Contact</button></p>
+</div>
 </div>
 </div>
 <br>
@@ -1320,11 +1326,9 @@ button:hover, a:hover {
 </div>
   
     </section>
-    <!-- ##### Contact Area End ##### -->
 	<br>
 	<br>
 
-      <!-- ##### Footer Area Start ##### -->
     <footer class="footer-area">
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
@@ -1350,7 +1354,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             </div>
         </div>
     </footer>
-    <!-- ##### Footer Area Start ##### -->
 
     <!-- ##### All Javascript Script ##### -->
     <!-- jQuery-2.2.4 js -->
