--- a/team.html
+++ b/team.html
@@ -309,7 +309,7 @@ button:hover, a:hover {
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/team.png);">
         <div class="bradcumbContent">
             <p></p>
-            <h2><font style="font-family: 'Audiowide', cursive;">O U R &nbsp;  T E A M </h2>
+            <h2><font style="font-family: 'Audiowide', cursive;">O U R &nbsp;  T E A M </font></h2>
         </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
@@ -352,7 +352,7 @@ button:hover, a:hover {
 </div>
 </div>
 <br><br><br><br>
-<h1 class="heading"><center> Web and App Development </center></h1>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;"> Web and App Development</font> </center></h1>
 
 
 
@@ -440,7 +440,7 @@ button:hover, a:hover {
   
   <br>
   <br><br><br>
-  <h1 class="heading"><center> HOSPITALITY </h1></center>
+  <h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;"> HOSPITALITY</font> </h1></center>
   
  
 <div class="card">
@@ -530,7 +530,7 @@ button:hover, a:hover {
 
 <br>
 <br>
-<h1 class="heading"><center>Events</h1></center>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">Events</font></h1></center>
 <br>
 <div class="card">
   <img src="assets\images\tanul_sir.jpg" alt="Unknown" style="width:100%">
@@ -669,7 +669,7 @@ button:hover, a:hover {
 </div>
 <br>
 <br>
-<h1 class="heading"><center>Marketing</h1></center>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">Marketing</font></h1></center>
 <div class="card">
   <img src="assets\images\puru_sir.jpg" alt="Unknown" style="width:100%">
   <div class="container">
@@ -839,7 +839,7 @@ button:hover, a:hover {
 
 <br>
 <br>
-<h1 class="heading"><center>FINANCE</center></h1>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">FINANCE </font></center></h1>
 <br>
 <div class="card">
   <img src="assets\images\kartikey_sir.jpg" alt="Unknown" style="width:100%">
@@ -908,7 +908,7 @@ button:hover, a:hover {
  </div>
   </div>
 <br><br><br><br>
-<h1 class="heading"><center>Logistics </h1></center>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">Logistics </font></h1></center>
 
 <div class="card">
   <img src="assets\images\naman_sir.jpeg" alt="Unknown" style="width:100%">
@@ -1012,7 +1012,7 @@ button:hover, a:hover {
   </div>
   
 <br><br>
-<h1 class="heading"><center>PUBLICITY</h1></center>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">PUBLICITY</font></h1></center></center>
 
 <div class="card">
   <img src="assets\images\mohit_sir.jpg" alt="Unknown" style="width:100%">
@@ -1102,7 +1102,7 @@ button:hover, a:hover {
 
 <br><br>
 
-<h1 class="heading"><center>DESIGN</center></h1>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;">DESIGN</font></center></h1>
 <div class="card">
   <img src="assets/images/rishu_sir.jpg" alt="Unknown" style="width:100%">
   <div class="container">
@@ -1189,7 +1189,7 @@ button:hover, a:hover {
 
 <br><br>
 
-<h1 class="heading"><center> CONTENT WRITING </center></h1>
+<h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;"> CONTENT WRITING </font> </center></h1>
 <div class="card">
   <img src="assets\images\sonia_mam.jpg" alt="Sonia Malik" style="width:100%">
   <div class="container">
@@ -1239,7 +1239,7 @@ button:hover, a:hover {
  </div>
   </div>
   
-  <h1 class="heading"><center> Talk Coordination </center></h1>
+  <h1 class="heading"><center><font size="6" style="font-family: 'Audiowide', cursive;"> Talk Coordination </font></center></h1>
   <div class="card">
   <img src="assets\images\avinash_sir.jpg" alt="Sonia Malik" style="width:100%">
   <div class="container">
