--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta property="og:title" content="ECell-HBTU">
 <meta property="og:description" content="GIIEC, the E Cell of HBTU fosters entrepreneurship among the students of the college and helps them to be dedicated to promote the spirit of the e-world">
-<meta property="og:image" content="img/core-img/og.png">
-<meta property="og:url" content="http://ecellhbtu.in">
+<meta property="og:image" content="http://www.ecellhbtu.in/img/core-img/og.png">
+<meta property="og:url" content="http://www.ecellhbtu.in">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title -->
