--- a/summit.html
+++ b/summit.html
@@ -175,7 +175,7 @@ hr {
   </div>
   
   <div class="bottomleft">
-    <p><font size="6" style="font-family: 'Audiowide', cursive;"><font color="#f00">GIIEC </font> presents E-Summit 2019</font></p>
+    <p><font size="6" style="font-family: 'Audiowide', cursive;"><font color="#f00">GIIEC </font> presents </font></p>
 	<br>
 	</div>
   
