--- a/summit.html
+++ b/summit.html
@@ -22,7 +22,7 @@
             position: relative;
             font-family: sans-serif;
             font-size: 18px;
-            background: linear-gradient(141deg, #48c6ef 0%, #667eea 51%, #764ba2 75%);
+            background: linear-gradient(141deg, #764ba2 0%, #667eea 51%, #764ba2 75%);
             overflow: hidden;
         }
 
