--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ $(document).ready(function(){
 							<h6 data-animation="fadeInUp" data-delay="100ms"><font style="font-family: 'Audiowide', cursive;">Incubation Hub</font></h6>
                                 <h2 data-animation="fadeInUp" data-delay="300ms"><font style="font-family: 'Audiowide', cursive;">HBTU </font><span><font style="font-family: 'Audiowide', cursive;">HBTU</font></span></h2>
 							<a data-animation="fadeInUp" data-delay="100ms" href="dic.html" class="btn oneMusic-btn mt-50">Design Innovation Centre <i class="fa fa-angle-double-right"></i></a>   &nbsp;&nbsp;&nbsp;
-<a data-animation="fadeInUp" data-delay="100ms" href="iic.html" class="btn oneMusic-btn mt-50">Innovation and Incubation Centre <i class="fa fa-angle-double-right"></i></a>&nbsp;&nbsp;&nbsp;
-                               
+<a data-animation="fadeInUp" data-delay="200ms" href="iic.html" class="btn oneMusic-btn mt-50">Innovation and Incubation Centre <i class="fa fa-angle-double-right"></i></a>&nbsp;&nbsp;&nbsp;
+ <a data-animation="fadeInUp" data-delay="300ms" href="main.html" class="btn oneMusic-btn mt-50">Executive Centre <i class="fa fa-angle-double-right"></i></a>&nbsp;&nbsp;&nbsp;                              
                                 </div>
                         </div>
                     </div>
