--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
 	<div class="col-4">
 	
 	<div class=".img-responsive">
-      <img class= "img1" src="images/prg.jpg">
+      <img class= "img1" src="images/prg.jpg" height="200" width="200">
       <h1 class="intent"> Dean of Planning and Resource Generation </h1>
 	  <h3 class="incub">Dr. Raghuraj Singh</h3>
 	  <h3 class="incub">Executive Member</h3>							
