--- a/dic.html
+++ b/dic.html
@@ -50,6 +50,9 @@
 			<li>Provide research and development and Incubation facilities for budding entrepreneurs amongst students, teachers, and others and to provide help related to legal, financial, marketing and other matters to them.</li>
 		</ol>
 	</div>
+	<div class="container">
+  <a href="index.html"><button type="button" class="btn btn-info btn-block">Go Back</button></a><br><br>
+</div>
 </body>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
