--- a/iic.html
+++ b/iic.html
@@ -33,6 +33,9 @@
 			<li>Entrepreneurship Research and Training Centre will aim to conduct cutting edge research, teaching and training in entrepreneurship in the Indian context by utilizing the facilities of Incubation Hub and the existing intellectual pool in the University. Plan is attached as Enclosure II.</li>
 		</ol>
 	</div>
+	<div class="container">
+  <a href="index.html"><button type="button" class="btn btn-info btn-block">Go Back</button></a><br><br>
+</div>
 </body>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
