--- a/main.html
+++ b/main.html
@@ -4,6 +4,9 @@
 	<title>Execuitve Cell</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="index.css">
+	
+    <link rel="icon" href="img/core-img/favicon.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
 <body>
@@ -12,6 +15,7 @@
 		<div class="jumbotron jumbotron-fluid" id="jumbo">
 	  <div class="container">
 	    <h1 class="display-4" ><strong>Executive Cell</strong></h1>
+		
 	  </div>
 	</div>
 
@@ -83,6 +87,10 @@
 	</div>
 </div>
 </div>
+</div>
+
+<div class="container">
+  <a href="index.html"><button type="button" class="btn btn-info btn-block">Go Back</button></a><br><br>
 </div>
 </body>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
