--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ $(document).ready(function(){
         <div class="container">
             <div class="row d-flex flex-wrap align-items-center">
                 <div class="col-12 col-md-6">
-                    <a href="#"><img src="img/core-img/logo.png" alt=""></a>
+                    <a href="index.html"><img src="img/core-img/logo.png" alt=""></a>
                     <p class="copywrite-text"><a href="#">
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | With Ayush Kumar.
 </p>
