--- a/hackathon.html
+++ b/hackathon.html
@@ -21,7 +21,7 @@
     <!-- Stylesheet -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Audiowide|Arvo|Exo|Kanit|Raleway|Shojumaru" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Lora" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
@@ -49,7 +49,7 @@
                     <nav class="classy-navbar justify-content-between" id="oneMusicNav">
 
                         <!-- Nav brand -->
-                        <a href="index.html" class="nav-brand"><img src="imgs/logoe.png" alt=""></a>
+                        <a href="esummit.html" class="nav-brand"><img src="imgs/logoe.png" alt=""></a>
 
                         <!-- Navbar Toggler -->
                         <div class="classy-navbar-toggler">
@@ -89,7 +89,7 @@
     <!-- ##### Breadcumb Area Start ##### -->
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/hackathon.jpg);">
         <div class="bradcumbContent">
-            <h5><font size="8" style="font-family: 'Audiowide', cursive;">H A C K A T H O N</font></h5>
+            <h5><font size="8" style="font-family: 'Raleway';">H A C K A T H O N</font></h5>
                     </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
@@ -105,7 +105,37 @@
                         <p>
 						<div class="form-group wow fadeInUp" data-wow-delay="200ms">
 						<font face="Concert One" size="5">
-						<font style="font-family: 'Kanit', sans-serif;"><center>Details will be uploaded soon ...... STAY TUNED and Keep Hustling!!</center> </font>
+						<font style="font-family: 'Lora';"><font size=5> <b>Prizes worth  ₹ 30,000</b></font> <br><br>
+<b><i>"Innovation is seeing what everybody has seen and thinking what nobody has thought."</b></i><br><br>
+The world is facing vast problems that needs to be tackled for the development of our country. Hackathon is a unique initiative to identify new and disruptive digital technology innovations as well as work on an industrial problem for solving the challenges faced by our country.
+<br><br><b>Hackathon will be conducted in two rounds.</b><br><br>
+<b>Round 1:</b> It is an online round. Problem statements will be given by 10th of April. The participants will choose the problem according to their interest. The participants will have to analyse, innovate and improvise and come up with a website / application along with a small presentation that helps to tackle the problem. The participants can also come up with their innovation that will help in dealing problems existing in the current scenario.
+<br><br><b>Round 2:</b> <br>
+<b>Venue:</b> CSE Seminar Hall<br><b>
+Date:</b> 20 April, 2019
+<br><br>
+The participants will have to prepare a presentation and present before the judging panel.
+<br>
+<br><b>
+Guidelines and Rules : 
+</b>
+<br>1• The participants can participate in team of maximum 3 members.
+<br>2• The presentation required in the round 1 should include the basic ideas and solutions .
+<br>3• The submissions for round 1 will be through a github link ( with their presentation attached in it)
+<br>4• Any kind of plagiarism will lead to disqualification.
+<br>5• The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i>
+<br>6• The presentation required in the round 2 must be detailed and creative.
+ <br>7• The decision of the judges and the event managers will be final and binding.
+<br><br><b>Judging criteria</b>
+<br>•	Originality in idea.
+<br>•	Innovation
+<br>•	Way of presentation
+<br><br>Contacts 
+<br>In case of any queries contact undersigned
+<br><b>Arnav Srivastava  -  7618922251
+<br>Nancy Singh           -   8707501884 
+<br>Amit Gupta             -   9453945956 
+</b> </font>
 						
 					</div>
 		   
