--- a/esummit.html
+++ b/esummit.html
@@ -246,7 +246,7 @@ $(document).ready(function(){
             <div class="row">
                 <div class="col-12">
                     <div class="section-heading style-2"><div class="form-group wow fadeInUp" data-wow-delay="100ms">
-                        <h2><font color="#fff" style="font-family: 'Lora';">TALKS AND SPEAKERS </h2>
+                        <h2><font color="#fff" style="font-family: 'Raleway';">TALKS AND SPEAKERS </h2>
 						</div>
                     </div>
                 </div>
@@ -462,7 +462,7 @@ $(document).ready(function(){
 					 <div class="col-12">
                     <div class="section-heading style-2">
 					<div class="form-group wow fadeInUp" data-wow-delay="100ms">
-                       <h2><font size="8" style="font-family: 'Lora';">EVENTS</font></h2>
+                       <h2><font size="8" style="font-family: 'Raleway';">EVENTS</font></h2>
 						</div>
                     </div>
                 </div>
