--- a/hackathon.html
+++ b/hackathon.html
@@ -109,33 +109,39 @@
 <b><i>"Innovation is seeing what everybody has seen and thinking what nobody has thought."</b></i><br><br>
 The world is facing vast problems that needs to be tackled for the development of our country. Hackathon is a unique initiative to identify new and disruptive digital technology innovations as well as work on an industrial problem for solving the challenges faced by our country.
 <br><br><b>Hackathon will be conducted in two rounds.</b><br><br>
-<b>Round 1:</b> It is an online round. Problem statements will be given by 10th of April. The participants will choose the problem according to their interest. The participants will have to analyse, innovate and improvise and come up with a website / application along with a small presentation that helps to tackle the problem. The participants can also come up with their innovation that will help in dealing problems existing in the current scenario.
+<b>Round 1:</b> <br>
+1. It is an online round.<br>
+2. You will have to choose a problem statement according to your interest and develop a solution for it. <br>
+3. Problem statements will be published by 8th April on the website.<br>
+4. The participants will have to analyse, innovate and improvise and come up with the website/application along with a <b>brief presentation</b> that will help to tackle a problem.<br>
+5. You can also come up with their self innovation that will help in dealing problems existing in the current scenario.<br>
+6. The presentation required in the round 1 should include the basic ideas, solutions and screenshots website/app.<br>
+7. The submissions for round 1 will be through a github link ( with their presentation attached in it)<br>
+8. The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i><br>
+9. List of shortlisted candidates will be uploaded on the website by 19th April 9:00pm.<br>
 <br><br><b>Round 2:</b> <br>
 <b>Venue:</b> CSE Seminar Hall<br><b>
 Date:</b> 20 April, 2019
 <br><br>
-The participants will have to prepare a presentation and present before the judging panel.
+1. Shortlisted candidates have to report at the given venue on 20th April TIME- .<br>
+2. Shortlisted candidates will have to come with their website/app and with a <b>detailed presentation</b> and present before the judging panel.<br>
 <br>
 <br><b>
 Guidelines and Rules : 
 </b>
-<br>1• The participants can participate in team of maximum 3 members.
-<br>2• The presentation required in the round 1 should include the basic ideas and solutions .
-<br>3• The submissions for round 1 will be through a github link ( with their presentation attached in it)
-<br>4• Any kind of plagiarism will lead to disqualification.
-<br>5• The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i>
-<br>6• The presentation required in the round 2 must be detailed and creative.
- <br>7• The decision of the judges and the event managers will be final and binding.
+<br>1. The participants can participate in team of maximum 3 members.
+<br>2.  Any kind of plagiarism will lead to disqualification.
+<br>3. The decision of the judges and the event managers will be final and binding.
 <br><br><b>Judging criteria</b>
 <br>•	Originality in idea.
 <br>•	Innovation
 <br>•	Way of presentation
-<br><br>Contacts 
-<br>In case of any queries contact undersigned
-<br><b>Arnav Srivastava  -  7618922251
+<br><br><b>Contacts 
+<br>
+<br></b>Arnav Srivastava  -  7618922251
 <br>Nancy Singh           -   8707501884 
 <br>Amit Gupta             -   9453945956 
-</b> </font>
+ </font>
 						
 					</div>
 		   
