--- a/esummit.html
+++ b/esummit.html
@@ -503,7 +503,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event2_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSet72Ycfetx1CXxjfi_khEhITC_A3swy8Qijss1WaKaJ57oRw/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" onclick = "event2_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -524,7 +524,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event3_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1xg7RperqZbyEMghOUwY_9cheVu_buVeZkOZOn_Jv0zczSw/viewform?vc=0&c=0&w=1&usp=mail_form_link" class="btn oneMusic-btn" onclick = "event3_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -587,7 +587,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event5_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnNKNwhiLUpmnLguyu1s5Q9BIMaftRtqCRTp4T_tDQQ-OCZQ/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" onclick = "event5_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
