--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="100ms">
                         <div class="album-thumb">
-                            <img src="imgs/jitu.png" class="avatar"  style="border-radius: 50%;" alt="">
+                            <img src="imgs/jitu.jpg" class="avatar"  style="border-radius: 50%;" alt="">
                             <!-- Album Price -->
                             
                             
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Jeetendra Kumar</font></h5>
+                                <h5><font color="#fff">Radha Kant Jaiswal</font></h5>
                             </a>
-                            <p><font color="#D23333">TVF FAME</FONT></p>
+                            <p><font color="#D23333">Assoc Director, Karlz Store</FONT></p>
                         </div>
                     </div>
                 </div>
@@ -276,13 +276,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
                         <div class="album-thumb">
-                            <img src="imgs/abish.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/sikka.jpg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Abish Mathew</font></h5>
+                                <h5><font color="#fff">Rajiv Sikka</font></h5>
                             </a>
-                            <p><font color="#D23333">YOU KNOW HIM</font></p>
+                            <p><font color="#D23333">Director, Indraprastha Gas Ltd.</font></p>
                         </div>
                     </div>
                 </div>
@@ -291,13 +291,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="album-thumb">
-                            <img src="imgs/prabhu.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/dw.jpg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Jaideep Prabhu</font></h5>
+                                <h5><font color="#fff">Pushpendra Dwivedi</font></h5>
                             </a>
-                            <p><font color="#D23333">Writer, Jugaad Innovation</font></p>
+                            <p><font color="#D23333"> Owner, Barrownz Groupss</font></p>
                         </div>
                     </div>
                 </div>
