--- a/Iid.html
+++ b/Iid.html
@@ -106,6 +106,41 @@
 						<div class="form-group wow fadeInUp" data-wow-delay="200ms">
 						
 						<font size="5" style="font-family: 'Kanit', sans-serif;">
+						<center>(Solo and Group Event)</center>
+<b>Description:</b> <br> 
+In a world full of challenges and problems that need to be urgently addressed, innovation is what makes it possible to come up with solutions that will benefit the maximum number of users and such innovation is often enabled by design.
+Do you think you are creative?? Do you think you can revolutionize a product??<br>
+If yes here is your chance to show your talent capability.<br>
+This event is for those who are curious to explore the world in a different perspective and ready to change it accordingly.<br><br>
+<b>
+Items to Innovative:</b>
+<br>•	Charger
+<br>•	Bags
+<br>•	Bed
+<br>•	Fan
+<br>•	Lightbulb
+<br>•	Automobile Key
+<br>•	Ship’s Anchor
+<br><br><b>
+General Rules:</b><br>
+<br>•	Solo and Group Event. 
+<br>•	Team can have maximum of 5 members.
+<br>•	Design must be original.
+<br>•	Replacing any team members is not allowed after registration.
+<br>•	Your design must be feasible, economically sustainable, social and environmental responsible, aesthetic and distinct from original.
+<br>•	Any number of Projects can be undertaken
+<br><br><b>Judging Criteria:</b>
+<br>•	Degree of Innovation
+<br>•	Degree of distinction
+<br>•	Aesthetics
+<br>•	Economic Sustainability
+<br>•	Social and Environmental Responsibility
+<br>•	Functionality
+<br><br><b>Submission Requirements:
+</b><br>•   Submit all the images related to your Projects (Hand Drawn, Drafting, CAD etc.)
+<br>•	All texts provided with your images (Abstract, description/functionality, application, material used, product name).
+
+
 		</font>
 						
 					</div>
