--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ $(document).ready(function(){
                             <img src="imgs/PM.png" alt="Politicks">
                         </div>
                         <div class="event-text">
-                            <h4>POLITICKS</h4>
+                            <h4>BUILD YOUR COMPANY</h4>
                             
                             <a href="poli.html" class="btn see-more-btn">See Event</a>
 							 <div class="row">
@@ -705,7 +705,7 @@ $(document).ready(function(){
                         <div class="event-text">
                             <h4>INNOVATION IN DESIGN</h4>
                             
-                            <a href="got.html" class="btn see-more-btn">See Event</a>
+                            <a href="Iid.html" class="btn see-more-btn">See Event</a>
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
