--- a/pitch.html
+++ b/pitch.html
@@ -89,7 +89,7 @@
     <!-- ##### Breadcumb Area Start ##### -->
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/pitch.jpg);">
         <div class="bradcumbContent">
-            <h5><font size="8" style="font-family: 'Audiowide', cursive;">PITCH &nbsp; PLEASE</font></h5>
+            <h5><font size="8" style="font-family: 'Audiowide', cursive;">P**CH &nbsp; PLEASE!</font></h5>
 			
 			
                     </div>
@@ -108,20 +108,40 @@
 						<div class="form-group wow fadeInUp" data-wow-delay="200ms">
 						
 						<font size="5" style="font-family: 'Kanit', sans-serif;">
-		* Registration will be online on our website. <br><br>
-* Atmost 4 team members allowed.<br><br>
+		<br><b>
+P**CH PLEASE!(PITCH PLEASE!)</b> is organized with a vision of creating an opportunity for various enthusiastic individuals who have passion and motivation to convert their innovation into an entrepreneurial idea- beneficial for the whole world.
+We test and examine your ability to identify your market, product usability and the need of the customer.
+<br><br><b>
+Event Structure –</b> PITCH PLEASE! will be organised in two rounds – 
+<br><b>
+ROUND I</b> – SCREENING<br>
+ This round comprises of submission of the summary of your idea through the form provided to you. Teams need to submit the abstract of their idea, mentioning little details of the same. Elimination will be done on basis of this abstract.
+ Team should send their summary in pdf format mailing them to - <i>registration@ecellhbtu.in</i> with Subject : ‘PITCH PLEASE!- SUMMARY’. 
+Please ensure that the details are submitted in ONE single mail only.<br><br>
+<b>
+ROUND II</b> – FINAL SHOWDOWN<br>
+●	Candidates qualifying the screening are eligible to give presentation of their ideas (or abstract) at E-SUMMIT’19 in front of our panel of judges. This event will take place on 20th April at HBTU, Kanpur.
+<br>●	Participants are requested to make their presentation of maximum 14 slides which should summarise their product and business plan. 
+<br>●	They will be given maximum __ minutes to present their idea in front of our panel of judges.
+<br><br><b>
+●	Rules and Guidelines –</b><br> 
+o	The team of maximum 5 students can participate in the event.
+<br>o	Individual participation is allowed. 
+<br>o	Teams are advised to submit abstract in the prescribed format before the deadline to become eligible for ROUND I.
+<br>o	All participants are required to be present with their college IDs at the time of participation.
+<br><br>
+<b>Note</b> - Participants should follow the guidelines strictly. In case of any dispute, the final decision will be in the hands of
+E-SUMMIT, HBTU KANPUR.
+<br><br>
+<b>
+●	Eligibility –</b>
+<br>Students from any college can participate in the competition.
+<br>Entries of the original work is allowed to participate.
+<br><br>
+<b>
+●	VENUE -</b>  Electrical Engineering Department.
 
-* Participants have to send us the problem on which they will be providing the solution on the Google form itself however their ideas will *not* be publically disclose. (Google form links will be shared soon.)
-
-<br><br>* Our authorized committee will select the 30 best ideas and the selected participants get a chance of pitching on 9th and 10th Feb in front of our jury board (consisting of venture capitalists, angel investors and mentors ).
-
-<br><br>*All the judgement in second round will be done by our jury board and they will guide and support you for your future business.
-
-<br><br>* Based on the final results top 3 ideas can have cash prizes as follows-<br>
-1st - Rs 30,000<br>
-2nd- Rs 15,000<br>
-3rd-  Rs 5,000		
-					</div>
+			</div>
 		   
 
                 </div>
