--- a/ipl.html
+++ b/ipl.html
@@ -114,20 +114,26 @@ Impact players from different countries get an opportunity to play for the same 
 
 Here is your chance to create your own IPL team and grab exciting prizes. You all must have surly dreamt of it.
 <br><br>
-<b>RULES:-</b>
+<b>EVENTS STRUCTURE:-</b>
 <br>
-1. There will be a quiz competition it will test your knowledge of the most exciting cricket league in the world. 
-<br>2. You all have to register in teams of 4. One girl in each team is compulsory.
-<br>3. Registrations will be done online. Top eight(8) teams will be selected for the auction round.
-<br>4. Details and rules of the auction round will be told to you then and there itself. 
+<B>Round 1: </b>
+<BR>1. Registrations will be done online.
+<br>2. You all have to register in teams of four. One girl in each team is compulsory.
+<br>3. Eight teams will be shortlisted on the basis of quiz that will be conducted based on IPL 2019 and auctions of IPL2019 for Round 2. 
+<br>4.Shortlisted candidates will be informed till 20th April 2019 till 5:00pm and they will be given list of players to be auctioned
 <br> <br>
+<b> Round 2- </b><br>
+<br>1. Shortlisted candidates will be given their respective teams based on draw
+<br>2. Rules of Round 2 will be told at the auction
+<br><br>
+
 So enjoy the thrill of owning an IPL team and have a chance to win exciting prizes.
 <br>
 <br>
 <b><br>
 DATE:-</b> 21/04/2019
-<b><br>VENUE:- </b>BE/FT lawn
-<b><br>CONTACTS:- </b>
+<b><br>VENUE:- </b>BE/FT lawn<br>
+<b><br>CONTACTS:- </b><br>
 <br>SHIVAM MISHRA(3rd ME)  -                                    7007574478
 <br>ABHINAV TRIPATHI(2nd CE)-	 		   8318258350
 <br>AMAN KHARE(2nd ME)		-		   9413057067
