--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/PM.png" alt="Politicks">
+                            <img src="imgs/buc.jpeg" alt="Politicks">
                         </div>
                         <div class="event-text">
                             <h4>BUILD YOUR COMPANY</h4>
@@ -599,7 +599,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/pitch.jpg" alt="pitch please!">
+                            <img src="imgs/pitch.jpeg" alt="pitch please!">
                         </div>
                         <div class="event-text">
                             <h4>PITCH PLEASE!</h4>
@@ -662,7 +662,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/got.png" alt="Game of thrones">
+                            <img src="imgs/download.jpeg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PUBG LIVE</h4>
@@ -681,7 +681,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/got.png" alt="Game of thrones">
+                            <img src="imgs/Pivot.jpeg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PIVOT</h4>
@@ -700,7 +700,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/got.png" alt="Game of thrones">
+                            <img src="imgs/download.jpeg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>INNOVATION IN DESIGN</h4>
