--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/download.jpeg" alt="Game of thrones">
+                            <img src="imgs/download.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PUBG LIVE</h4>
@@ -700,7 +700,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/download.jpeg" alt="Game of thrones">
+                            <img src="imgs/download.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>INNOVATION IN DESIGN</h4>
