--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/Pivot.jpeg" alt="Game of thrones">
+                            <img src="imgs/pivot.jpeg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PIVOT</h4>
