--- a/poli.html
+++ b/poli.html
@@ -112,7 +112,7 @@
 "Build your Company" is mainly about  making your own company comprising of members particularly mainly of CEO(Chief executive officer) ,COO (Chief Operating Officer),CFO(Chief Financial officer) and CTO(Chief Technical officer)
 <BR>The main aim will be to check their skills as per their respective fields.
 <BR>This will be done in two rounds.
-<BR><BR><b>Round 1:</b> You can register for the respective positions through google form :-  CEO ,marketing consultant , COO ,CFO and CTO
+<BR><BR><b>Round 1:</b> You can register for the respective positions through google form :-  CEO ,COO ,CFO and CTO
 It will be based on first come first serve basis. We will disclose a document containing the list of selected participants which will 7 participants from each department(total members -28)based on some screening questions which will be provided in our google form. Then all the selected participants should team up among themselves to form 7 teams( each team consisting of 4 members from each department).
 <BR><BR>
 <b>Round2:</b> The team , each member of the team will be given a problem for which they will have to prepare a presentation and present before a judging panel.
