--- a/hackathon.html
+++ b/hackathon.html
@@ -133,6 +133,7 @@ Guidelines and Rules :
 <br>1. The participants can participate in team of maximum 3 members.
 <br>2.  Any kind of plagiarism will lead to disqualification.
 <br>3. The decision of the judges and the event managers will be final and binding.
+<BR>4. Registrations will be accepted till 18th April - 11:59pm.
 <br><br><b>Judging criteria</b>
 <br>•	Originality in idea.
 <br>•	Innovation
