--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event1_registration()">Register <i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://forms.gle/9rALkwYVNMBNzvYz8" class="btn oneMusic-btn" onclick = "event1_registration()">Register <i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -566,7 +566,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event6_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="	https://docs.google.com/forms/d/e/1FAIpQLSfgn2GgB38A5VEiU0qGp_C0pN3M8wxdrbx8qRapoQI0FBC4LQ/viewform?usp=sf_link" class="btn oneMusic-btn" onclick = "event6_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -650,7 +650,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event9_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="" class="btn oneMusic-btn" onclick = "event9_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -668,11 +668,11 @@ $(document).ready(function(){
                         <div class="event-text">
                             <h4>PUBG LIVE</h4>
                             
-                            <a href="got.html" class="btn see-more-btn">See Event</a>
+                            <a href="pubg.html" class="btn see-more-btn">See Event</a>
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="got.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="pubg.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
