--- a/poli.html
+++ b/poli.html
@@ -119,7 +119,7 @@ It will be based on first come first serve basis. We will disclose a document co
 
 <BR><BR><b>
 Rules of the Event :-</b><BR>
-<BR>•	All the registration will be on our website through google form till 18th April.
+<BR>•	All the registration will be on our website through google form till 18th April - 11:59pm.
 <BR>•	Judgement will be done on their way of thinking , speaking skills and their ideas.
 <BR>•	Their marketing skills will be judged as well.
 <BR>•	Its necessary for candidate to give a proper powerpoint presentation.
