--- a/hackathon.html
+++ b/hackathon.html
@@ -115,7 +115,7 @@ The world is facing vast problems that needs to be tackled for the development o
 2. You will have to choose a problem statement according to your interest and develop a solution for it. <br>
 3. Problem statements will be published by 8th April on the website.<br>
 4. The participants will have to analyse, innovate and improvise and come up with the website/application along with a <b>brief presentation</b> that will help to tackle a problem.<br>
-5. You can also come up with their self innovation that will help in dealing problems existing in the current scenario.<br>
+5. You can also come up with your self innovation that will help in dealing problems existing in the current scenario.<br>
 6. The presentation required in the round 1 should include the basic ideas, solutions and screenshots website/app.<br>
 7. The submissions for round 1 will be through a github link ( with their presentation attached in it)<br>
 8. The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i><br>
